lots of updates to the training

--- a/negation_nlp.ipynb
+++ b/negation_nlp.ipynb
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d6ee5e5f",
+   "id": "0b7671cb",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "5c760e12",
+   "id": "504330a2",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "06b40c74",
+   "id": "253e15f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,12 +702,8 @@
     "\n",
     "myTokenizer = Tokenizer(num_words=vocab_size)\n",
     "myTokenizer.fit_on_texts(df_concat['text'])\n",
-    "#print(myTokenizer.word_index)\n",
     "sequences = myTokenizer.texts_to_sequences(df_neg['text'])\n",
-    "padded = pad_sequences(sequences, maxlen=max_length, padding=\"post\")\n",
-    "#padded = pad_sequences(sequences, maxlen=20, padding=\"post\")\n",
-    "\n",
-    "len(padded)"
+    "padded = pad_sequences(sequences, maxlen=max_length, padding=\"post\")"
    ]
   },
   {
@@ -1397,7 +1393,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 135,
+   "id": "37e0c874",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "362116"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "id": "b31dc425",
    "metadata": {},
    "outputs": [],
@@ -1427,12 +1444,13 @@
     "    model.compile(optimizer='adam',\n",
     "                  loss=tf.keras.losses.BinaryCrossentropy(),\n",
     "                  metrics=['accuracy'])\n",
-    "    history = model.fit(X_train, y_train, epochs=70, callbacks = lr_schedule)\n",
+    "    history = model.fit(X_train, y_train, epochs=140, callbacks = lr_schedule)\n",
     "    plt.semilogx(history.history[\"lr\"], history.history[\"loss\"])\n",
     "    plt.xlabel(\"Learning Rate (log)\")\n",
     "    plt.ylabel(\"Loss\")\n",
     "    plt.title(\"Learning Rate Determination \"+name)\n",
     "    plt.show()\n",
+    "    return history\n",
     "\n",
     "#Produces a summary of the model and returns the history\n",
     "def run_model(model, lrate):\n",
@@ -1449,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "c994b5db",
+   "id": "d32855c4",
    "metadata": {},
    "outputs": [
     {
@@ -1641,8 +1659,10 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "5f656471",
-   "metadata": {},
+   "id": "94ae19f4",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1832,6 +1852,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9f0a42bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length = max_length),\n",
+    "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(embedding_dim, dropout = 0.3, return_sequences = True)),\n",
+    "    tf.keras.layers.Dense(6, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 117,
    "id": "36d2cb08",
    "metadata": {},
@@ -1925,9 +1961,8 @@
    ],
    "source": [
     "embedding_dim = 16\n",
-    "model = tf.keras.Sequential([\n",
+    "model2 = tf.keras.Sequential([\n",
     "    tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length = max_length),\n",
-    "    #tf.keras.layers.Dense(100, activation='relu'),\n",
     "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(embedding_dim, dropout = 0.3, return_sequences = True)),\n",
     "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(embedding_dim)),\n",
     "    tf.keras.layers.Dense(6, activation='relu'),\n",
@@ -1945,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "80b70916",
+   "id": "a86018ea",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "5d2370a2",
+   "id": "f63c5e4d",
    "metadata": {
     "scrolled": true
    },
@@ -2139,7 +2174,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "14800ec6",
+   "id": "d9a27476",
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2313,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "45c4c9c3",
+   "id": "bc586b85",
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "957335d4",
+   "id": "0fc548ae",
    "metadata": {},
    "outputs": [],
    "source": []
